@@ -18,13 +18,15 @@
  */
 package org.codedefenders.game.puzzle.solving;
 
+import java.lang.reflect.InvocationTargetException;
+
 import org.codedefenders.game.Test;
 import org.codedefenders.game.puzzle.PuzzleGame;
 
 /**
  * Interface for a test solving strategy.
  *
- * {@link #solve(PuzzleGame, Test)} returns whether a submitted test resulted in a state
+ * <p>{@link #solve(PuzzleGame, Test)} returns whether a submitted test resulted in a state
  * of the puzzle game, which the strategy marks as solved.
  *
  * @author <a href="https://github.com/werli">Phil Werli</a>
@@ -38,8 +40,9 @@ public interface TestSolvingStrategy {
             return null;
         }
         try {
-            return ((TestSolvingStrategy) Types.valueOf(name).clazz.newInstance());
-        } catch (IllegalArgumentException | IllegalAccessException | InstantiationException ignored) {
+            return ((TestSolvingStrategy) Types.valueOf(name).clazz.getDeclaredConstructor().newInstance());
+        } catch (IllegalArgumentException | IllegalAccessException | InstantiationException | NoSuchMethodException
+                 | InvocationTargetException ignored) {
             // ignored
         }
         return null;
@@ -48,10 +51,10 @@ public interface TestSolvingStrategy {
     enum Types {
         KILLED_ALL_MUTANTS(KilledAllMutantsTestSolvingStrategy.class, "Tests killed all mutants.");
 
-        Class clazz;
-        String description;
+        final Class<?> clazz;
+        final String description;
 
-        Types(Class clazz, String description) {
+        Types(Class<?> clazz, String description) {
             this.clazz = clazz;
             this.description = description;
         }
